# pidj

./: .bumpversion.cfg  CONTRIBUTING.rst  README.rst  pyproject.toml  setup.cfg  tasks.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: main.yml
docs/: conf.py  index.rst  installation.rst  usage.rst
pidj/: __init__.py  cli.py  configs.py  pidj.py
pidj/auth/: auth.py
tests/: __init__.py  test_pidj.py
