[tool]
[tool.poetry]
name = "pidj"
version = "0.1.0"
homepage = "https://github.com/mickeykkim/pidj"
description = "Top-level package for pidj."
authors = ["Mickey Kim <mickeykkim@gmail.com>"]
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
]
packages = [
    { include = "pidj" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = "*"
click = "*"

[tool.poetry.dev-dependencies]
bumpversion = "*"
coverage = "*"
flake8 = "*"
invoke = "*"
isort = "*"
pylint = "*"
pytest = "*"
sphinx = "*"
tox = "*"
yapf = "*"
mypy = "*"
types-requests = "*"

[tool.poetry.scripts]
pidj = 'pidj.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
